--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
   "name": "ms-return-scraper",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "serve": "functions-framework --target=main",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "functions-framework",
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "lint": "eslint --fix --ext .ts src"
   },
   "repository": {
     "type": "git",
     "url": "dep_peutes:peutes/MsReturnScraper.git"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@google-cloud/firestore": "^4.8.1",
     "@google-cloud/functions-framework": "^1.7.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "@types/node": "^14.14.22",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.3"
   }
 }
