--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "ms-return-scraper",
+  "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "start": "functions-framework",
-    "build": "tsc",
-    "watch": "tsc --watch",
-    "lint": "eslint --fix --ext .ts src"
+    "clean": "rm -rf ./dist/*",
+    "build": "npm run clean && tsc",
+    "lint": "eslint --fix --ext .ts src",
+    "watch": "npm run clean && run-p watch:*",
+    "watch:build": "tsc -w",
+    "watch:lint": "esw -w --fix --ext .ts src",
+    "start": "npm run build && cd dist && functions-framework --target=main"
   },
   "repository": {
     "type": "git",
@@ -13,17 +17,22 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^4.8.1",
-    "@google-cloud/functions-framework": "^1.7.1"
+    "@google-cloud/functions-framework": "^1.7.1",
+    "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "@types/node": "^14.14.22",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-watch": "^7.0.0",
+    "npm-run-all": "^4.1.5",
+    "npm-watch": "^0.7.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
